@@ -1,4 +1,4 @@
-<option type="int" id="opt/gdi-PageTimeout">
+<option type="enum" id="opt/gdi-PageTimeout">
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
@@ -17,9 +17,48 @@
   <constraints>
      <constraint sense="true">
       <driver>gdi</driver>
-      <arg_defval>15</arg_defval>
+      <arg_defval>ev/gdi-PageTimeout-15</arg_defval>
      </constraint>
   </constraints>
-  <arg_max>100</arg_max>
-  <arg_min>1</arg_min>
+  <enum_vals>
+   <enum_val id="ev/gdi-PageTimeout-15">
+    <ev_longname>
+     <en>15 sec</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>15</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>15</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/gdi-PageTimeout-30">
+    <ev_longname>
+     <en>30 sec</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>30</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>30</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/gdi-PageTimeout-45">
+    <ev_longname>
+     <en>45 sec</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>45</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>45</ev_driverval>
+   </enum_val>
+  </enum_vals>
 </option>
