@@ -1,4 +1,4 @@
-<option type="int" id="opt/gdi-PowerSaveTime">
+<option type="enum" id="opt/gdi-PowerSaveTime">
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
@@ -17,9 +17,87 @@
   <constraints>
      <constraint sense="true">
       <driver>gdi</driver>
-      <arg_defval>5</arg_defval>
+      <arg_defval>ev/gdi-PageTimeout-5</arg_defval>
      </constraint>
   </constraints>
-  <arg_max>60</arg_max>
-  <arg_min>1</arg_min>
+  <enum_vals>
+   <enum_val id="ev/gdi-PageTimeout-5">
+    <ev_longname>
+     <en>5 min</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>5</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>5</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/gdi-PageTimeout-10">
+    <ev_longname>
+     <en>10 min</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>10</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>10</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/gdi-PageTimeout-15">
+    <ev_longname>
+     <en>15 min</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>15</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>15</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/gdi-PageTimeout-30">
+    <ev_longname>
+     <en>30 min</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>30</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>30</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/gdi-PageTimeout-45">
+    <ev_longname>
+     <en>45 min</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>45</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>45</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/gdi-PageTimeout-60">
+    <ev_longname>
+     <en>60 min</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>60</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>60</ev_driverval>
+   </enum_val>
+  </enum_vals>
 </option>
