@@ -17,7 +17,7 @@
   <constraints>
      <constraint sense="true">
       <driver>gdi</driver>
-      <arg_defval>ev/gdi-RET-On</arg_defval>
+      <arg_defval>ev/gdi-RET-Off</arg_defval>
      </constraint>
   </constraints>
   <enum_vals>
@@ -33,6 +33,11 @@
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
     <ev_driverval>ON</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <driver>gdi</driver>
+     </constraint>
+    </constraints>
    </enum_val>
    <enum_val id="ev/gdi-RET-Off">
     <ev_longname>
