@@ -1,3 +1,14 @@
+2003-07-20  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* opt/gdi-RET.xml: Forced "RET" option of "gdi" driver to be
+	  always off, turning it on gives messy printouts and blocks the
+	  printer (at least Samsung ML-4500).
+
+	* opt/gdi-PageTimeout.xml, opt/gdi-PowerSaveTime.xml: Made these
+	  options enumerated choice options with only a few values, one
+	  does not need to set these values with per-second or per-minute
+	  accuracy.
+	
 2003-07-19  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-LaserJet_4050.xml: Cleaned up text, added URL of
